[package]
name = "mofang_controller"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mofang_engine = {path = "../engine"}
macroquad = {git = "https://github.com/not-fl3/macroquad.git"}
hex2d = "1.0.0"
once_cell = "1.7.2"
const-tweaker = "0.3.1"
enum-map = "0.6.4"
