[package]
name = "mofang_games"
version = "0.1.0"
authors = ["gamma-delta"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mofang_engine = {path="../engine"}

enum-map = "0.6.4"
itertools = "0.10.0"
fastrand = "1.4.0"
hex2d = "1.0.0"
